@@ -43,7 +43,7 @@ we can skip the Acacia homopolymer denoising step and increase rarefaction depth
 from 1,000 (by default) to 10,000 reads:
    hitman_hire    --dir 01-hire/    --five Sample1.R1.fasta.gz Sample2.R1.fasta.gz --three Sample1.R2.fasta.gz Sample2.R2.fasta.gz
    ln -s 01-hire/*cat_files.fastq seqs.fastq
-   hitman_deploy  --dir 02-deploy/  --input seqs.fastq -p SKIP_DENOISING=1
+   hitman_deploy  --dir 02-deploy/  --input seqs.fastq -p SKIP_DENOISING=1 -p LIB_ADAPTERS=/path/to/trimmomatic/adapters/NexteraPE-PE.fa
    ln -s 02-deploy/*trunc_seqs.fna seqs_qa.fna
    hitman_execute --dir 03-execute/ --input seqs_qa.fna --primers primers.fna -p RAREFACTION_DEPTH=10000
 
