@@ -13,6 +13,9 @@
 // Flag to skip the computation of sequence statistics
 SKIP_STATS=0
 
+// FASTA file of the Illumina adapters to clip (your own TRIMMOMATIC-formatted file, or one of the TRIMMOMATIC files: NexteraPE-PE.fa  TruSeq2-PE.fa  TruSeq2-SE.fa  TruSeq3-PE-2.fa  TruSeq3-PE.fa  TruSeq3-SE.fa)
+LIB_ADAPTERS=""
+
 // Quality score below which 3' end read truncation should start (going from 5' to 3')
 TRIM_QUAL=13
 // Q20: 1%, Q19: 1.3%, Q18: 1.6%, Q17: 2%, Q16: 2.5%, Q15: 3.2%, Q14: 4%,
@@ -49,6 +52,8 @@ Bpipe.run {
    seq_stats.using(stage:'initial', skip:SKIP_STATS) +
    rm_small_seqs.using(length:TRIM_LEN-10) +
    seq_stats.using(stage:'discard', skip:SKIP_STATS) +
+   clip_adapters.using(adapters:LIB_ADAPTERS) +
+   seq_stats.using(stage:'adapters', skip:SKIP_STATS) +
    //trunc_N +
    //seq_stats.using(stage:'ntrim', skip:SKIP_STATS) +
    //rm_small_seqs.using(length:TRIM_LEN-10) +
